--- a/public/client/index.html
+++ b/public/client/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script src="superagent/superagent.js "></script>
   <script src="test.js "></script>
 </head>
 <body>
