--- a/public/client/index.html
+++ b/public/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="superagent/superagent.js "></script>
+  <script src="/socket.io/socket.io.js"></script>
   <script src="test.js "></script>
 </head>
 <body>
