--- a/public/client/index.html
+++ b/public/client/index.html
@@ -2,11 +2,13 @@
 <html>
 <head>
   <script src="/socket.io/socket.io.js"></script>
+  <script src="svg.min.js"></script>
   <script src="test.js "></script>
 </head>
 <body>
-  <h1>
-    Hallo World!
-  </h1>
+  <div id="main-menu">
+  </div>
+  <div id="game">
+  </div>
 </body>
 </html>
