CLIENT|Add jquery

--- a/public/client/index.html
+++ b/public/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <script src="/socket.io/socket.io.js"></script>
     <script src="svg.min.js"></script>
+    <script src="jquery.min.js "></script>
     <script src="test.js "></script>
   </head>
   <body>
