BUILD|Add less task to gulp

--- a/public/client/index.html
+++ b/public/client/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="styling.css">
     <script src="/socket.io/socket.io.js"></script>
     <script src="svg.min.js"></script>
     <script src="jquery.min.js "></script>
